# rl4rlm

./: .env.example  .gitignore  CLAUDE.md  CLUSTER_SAFETY.md  MODEL_CARD.md  PAPER.md  PAPER_REFERENCE.md  README.md  RLM.md  SECURITY.md  TINKER.md  paper.md  pyproject.toml
eval/: run_eval.py
icmltemplate/: final_report.tex  references.bib
ideas/: 20260303_baseline_eval_qwen3_1_7b.md  20260303_rl_grpo_v1.md  20260303_rl_grpo_v2.md  20260303_rl_v3_kl_mixed.md  20260303_sft_warmstart_v2.md  20260303_smoke_test_qwen3_1_7b.md  20260309_smoke_test_qwen35_tinker.md  20260310_anti_shortcut_training.md  20260310_baseline_eval_qwen35_35b_a3b.md  20260310_cutting_edge_rl_techniques.md  20260310_decomposition_analysis.md  20260310_failure_mode_analysis.md  20260310_grpo_tricks_survey.md  20260310_grpo_v1_analysis.md  20260310_grpo_v1_mode_collapse_analysis.md  20260310_grpo_v1_step10_eval.md  20260310_grpo_v1_strategy.md  20260310_grpo_v2_improvements.md  20260310_grpo_v2_step5_analysis.md  20260310_grpo_v3_plan.md  20260310_hard_multihop_benchmark.md  20260310_hard_task_transfer.md  20260310_harder_benchmarks.md  20260310_mode_collapse_analysis.md  20260310_multi_hop_failure_analysis.md  20260310_multistage_pipeline.md  20260310_new_benchmarks_v2.md  20260310_paper_trajectories.md  20260310_post_training_techniques_survey_v2.md  20260310_research_findings.md  20260310_research_survey_rlm_landscape.md  20260310_sft_v1_v2_analysis.md  20260310_star_r1_trajectory_collection.md  20260310_strategy_conditioned_training.md  20260310_training_data_strategy.md  20260310_v3_analysis.md  (+33 more)
(+3137 files in other folders)
