[project]
name = "rlm-training"
version = "0.1.0"
description = "Training natively recursive language models via reinforcement learning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "accelerate>=0.34",
    "peft>=0.13",
    "datasets>=3.0",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6"]
trl = ["trl>=0.12"]
dev = ["pytest", "ipython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scaffold", "training", "eval", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
